Fix spacing of the donation widget (#70)

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -144,6 +144,7 @@ $content-width: min($max-width, calc(100% - $padding-size * 2));
 	}
 
 	p {
+		color: #ddd;
 		font-size: 1.15rem;
 		font-weight: 700;
 		margin: 0;
